force-app/main/default/objects/Field_Metrics__c/Field_Metrics__c.object-meta.xml
<CustomObject>
    <label>Field Metric</label>
    <nameField>
        <displayFormat>FM-{000000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>