force-app/main/default/objects/Field_Metrics__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment Asset</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Field Metrics</relationshipLabel>
    <relationshipName>Field_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>