force-app/main/default/objects/Field_Metrics__c/fields/Field_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Field_Intensity__c</fullName>
    <label>Field Intensity (kV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>