force-app/main/default/objects/Field_Metrics__c/fields/Gravity_Neutralization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gravity_Neutralization_Rate__c</fullName>
    <label>Neutralization Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>