force-app/main/default/objects/Field_Metrics__c/fields/Inertial_Dampener_Status__c.field-meta.xml
<CustomField>
    <fullName>Inertial_Dampener_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Inertial Dampener Active</label>
    <type>Checkbox</type>
</CustomField>